@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2022 the original author or authors.
+ * Copyright 2012-2024 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -18,7 +18,6 @@ package org.springframework.boot.actuate.autoconfigure.endpoint.web;
 
 import java.util.Collection;
 import java.util.Collections;
-import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.ObjectProvider;
 import org.springframework.boot.actuate.autoconfigure.endpoint.EndpointAutoConfiguration;
@@ -91,17 +90,16 @@ public class WebEndpointAutoConfiguration {
 			ObjectProvider<OperationInvokerAdvisor> invokerAdvisors,
 			ObjectProvider<EndpointFilter<ExposableWebEndpoint>> filters) {
 		return new WebEndpointDiscoverer(this.applicationContext, parameterValueMapper, endpointMediaTypes,
-				endpointPathMappers.orderedStream().collect(Collectors.toList()),
-				invokerAdvisors.orderedStream().collect(Collectors.toList()),
-				filters.orderedStream().collect(Collectors.toList()));
+				endpointPathMappers.orderedStream().toList(), invokerAdvisors.orderedStream().toList(),
+				filters.orderedStream().toList());
 	}
 
 	@Bean
 	@ConditionalOnMissingBean(ControllerEndpointsSupplier.class)
+	@SuppressWarnings("removal")
 	public ControllerEndpointDiscoverer controllerEndpointDiscoverer(ObjectProvider<PathMapper> endpointPathMappers,
 			ObjectProvider<Collection<EndpointFilter<ExposableControllerEndpoint>>> filters) {
-		return new ControllerEndpointDiscoverer(this.applicationContext,
-				endpointPathMappers.orderedStream().collect(Collectors.toList()),
+		return new ControllerEndpointDiscoverer(this.applicationContext, endpointPathMappers.orderedStream().toList(),
 				filters.getIfAvailable(Collections::emptyList));
 	}
 
@@ -127,6 +125,7 @@ public class WebEndpointAutoConfiguration {
 
 	@Configuration(proxyBeanMethods = false)
 	@ConditionalOnWebApplication(type = Type.SERVLET)
+	@SuppressWarnings("removal")
 	static class WebEndpointServletConfiguration {
 
 		@Bean
@@ -134,9 +133,8 @@ public class WebEndpointAutoConfiguration {
 		ServletEndpointDiscoverer servletEndpointDiscoverer(ApplicationContext applicationContext,
 				ObjectProvider<PathMapper> endpointPathMappers,
 				ObjectProvider<EndpointFilter<ExposableServletEndpoint>> filters) {
-			return new ServletEndpointDiscoverer(applicationContext,
-					endpointPathMappers.orderedStream().collect(Collectors.toList()),
-					filters.orderedStream().collect(Collectors.toList()));
+			return new ServletEndpointDiscoverer(applicationContext, endpointPathMappers.orderedStream().toList(),
+					filters.orderedStream().toList());
 		}
 
 	}
